Set up slim partials

--- a/app/views/partials/_partial.html.slim
+++ b/app/views/partials/_partial.html.slim
@@ -8,5 +8,4 @@
 .right(style='display: flex, justify-content: center;')
 
   #test
-    = render partial: 'partials/partial'
-    
+    = @worker_bees.first.comb_id
