Add regular table

--- a/app/views/worker_bees/index.html.slim
+++ b/app/views/worker_bees/index.html.slim
@@ -1,12 +1,6 @@
 .center(style='text-align: center;')
-  img(src='https://media.giphy.com/media/dcubXtnbck0RG/source.gif')
+  | bee page
 
-  .worker-bees-combtainer
-    br
-    | May the odds bee ever in your favor 💅
-
-.right(style='display: flex, justify-content: center;')
-
-  #test
-    = render partial: 'partials/partial'
+.bottom
+  = render partial: 'partials/table'
     
