Add styling to regular table

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,4 @@
  *= require_self
  */
 
- .bottom {
-     display: flex;
-     justify-content: center;
- }
+ @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
