--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -1,23 +1,20 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-
-table {
+.bottom {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+ }
+ 
+ table {
   width: 50%;
   table-layout: fixed;
-  background: -webkit-linear-gradient(left, #fcee84, #e8b510);
-  background: linear-gradient(to right,rgb(20, 107, 107), rgb(13, 97, 97), rgb(7, 82, 82));
+  background: -webkit-linear-gradient(left, rgb(38, 121, 121), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
+  background: linear-gradient(to right, rgb(38, 121, 121), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
   font-family: 'Roboto', sans-serif;
 }
 
 thead tr th {
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255, 255, 255, 0.096);
 }
- 
-/* .tbl-content{
-  height:300px;
-  overflow-x:auto;
-  margin-top: 0px;
-  border: 1px solid rgba(255,255,255,0.3);
-} */
 
 th {
   padding: 20px 15px;
@@ -36,4 +33,113 @@ td {
   font-size: 12px;
   color: #fff;
   border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+
+.regular {
+    /* display: none; */
+}
+
+.toggle-button-cover {
+    display: table-cell;
+    position: relative;
+    width: 200px;
+    height: 140px;
+    box-sizing: border-box;
+}
+
+.knobs, .layer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.button {
+    position: relative;
+    top: 50%;
+    width: 74px;
+    height: 36px;
+    margin: -20px auto 0 auto;
+    overflow: hidden;
+}
+
+.button, .layer {
+    border-radius: 100px;
+}
+
+.checkbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.knobs {
+    z-index: 2;
+}
+
+.layer {
+    width: 100%;
+    background-color: #ebfcee;
+    transition: 0.3s ease all;
+    z-index: 1;
+}
+
+.button .knobs:before, .button .knobs:after
+{
+    content: '+';
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 20px;
+    height: 10px;
+    color: #fff;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 9px 4px;
+    background-color: rgb(3, 244, 3);
+    border-radius: 50%;
+    transition: 0.3s ease all;
+}
+
+.button .knobs:before
+{
+    content: '+';
+}
+
+.button .knobs:after
+{
+    content: '-';
+}
+
+input:checked ~ .enhanced {
+    display: block;
+}    
+input:not(:checked) ~ .regular {
+    display: none;
+}
+
+.button .knobs:after {
+    right: -28px;
+    left: auto;
+    background-color: rgb(244, 57, 54);
+}
+
+.button .checkbox:checked + .knobs:before {
+    left: -29px;
+}
+
+.button .checkbox:checked + .knobs:after{
+    right: 4px;
+}
+
+.button .checkbox:checked ~ .layer {
+    background-color: #fef8f8;
 }
