--- a/app/views/worker_bees/index.html.slim
+++ b/app/views/worker_bees/index.html.slim
@@ -1,5 +1,5 @@
-.center(style='text-align: center;')
-  | bee page
+.top
+  = render partial: 'partials/top'
 
 .bottom
   = render partial: 'partials/table'
