Add styling to page

--- a/app/views/worker_bees/index.html.slim
+++ b/app/views/worker_bees/index.html.slim
@@ -1,6 +1,7 @@
-.top
-  = render partial: 'partials/top'
+= render partial: 'partials/top'
 
-.bottom
+= render partial: 'partials/middle'
+
+#table
   = render partial: 'partials/table'
     
