--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,16 @@
  */
 
  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+
+ html {
+  scroll-behavior: smooth;
+ }
+ 
+ a {
+  text-decoration: none;
+  color: rgb(6, 53, 53);
+ }
+
+ a:hover {
+    text-decoration: underline;
+ }
