--- a/app/views/partials/_middle.html.slim
+++ b/app/views/partials/_middle.html.slim
@@ -1,8 +1,9 @@
-.middle
+#middle
     h1 Honey is a tool to help manage your colonies, maximize productivity, minimize cost.
     .middle-right
         a> href="#graph"
             | View the graph for Pollen Globs collected and Nectar used
+        br
         br
         a> href="#table"
             | Switch between Enhanced and Regular table modes
