--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,14 +17,37 @@
  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 
  html {
-  scroll-behavior: smooth;
- }
- 
- a {
-  text-decoration: none;
-  color: rgb(6, 53, 53);
+    scroll-behavior: smooth;
  }
 
- a:hover {
-    text-decoration: underline;
- }
+
+a {
+    text-decoration: none;
+    color: rgb(6, 53, 53);
+    position:relative;
+    list-style-type:none;
+    cursor:pointer;
+  
+}
+
+a:not(:last-child) {
+    margin-bottom:20px;
+}
+  
+a::before {
+    position: absolute;
+    top: 50%;
+    transform: translate(0,-50%);
+    left:0;
+    content: "";
+    display: block;
+    height: 10px;
+    width: 0;
+    background-color: rgb(4, 61, 26);
+    opacity: .5;
+    transition: all .2s cubic-bezier(1, 0, 0, 1);
+  }
+  
+a:hover::before{
+      width:100%
+}
