--- a/app/assets/stylesheets/middle.css
+++ b/app/assets/stylesheets/middle.css
@@ -1,4 +1,4 @@
-.middle {
+#middle {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,11 +11,11 @@
     margin: auto;
 }
 
-.middle h1 {
+#middle h1 {
     width: 70%;
 }
 
-.middle-right {
+#middle-right {
     display: flex;
     flex-direction: column;
     width: 40%;
