--- a/app/views/partials/_top.html.slim
+++ b/app/views/partials/_top.html.slim
@@ -1,3 +1,5 @@
 .top
-    h1 BEE MANAGEMENT IS HARD
-    h5 Here's how we can help.
+    h1 IT'S HARD TO BE QUEEN BEE
+    / a> href="#middle"
+    h3
+       | Here's how we can help.
