--- a/app/views/worker_bees/index.html.slim
+++ b/app/views/worker_bees/index.html.slim
@@ -2,6 +2,9 @@
 
 = render partial: 'partials/middle'
 
+#graph
+  = render partial: 'partials/graph'
+
 #table
   = render partial: 'partials/table'
     
