--- a/app/views/partials/_middle.html.slim
+++ b/app/views/partials/_middle.html.slim
@@ -2,8 +2,20 @@
     h1 Honey is a tool to help manage your colonies, maximize productivity, minimize cost.
     .middle-right
         a> href="#graph"
-            | View the graph for Pollen Globs collected and Nectar used
+            | View the graph for 
+            span
+                | Pollen Globs 
+            | collected and 
+            span
+                | Nectar 
+            | used
         br
         br
         a> href="#table"
-            | Switch between Enhanced and Regular table modes
+            | Switch between 
+            span
+                | Enhanced 
+            | and 
+            span
+                | Regular 
+            | table modes
