Pick color scheme

--- a/app/views/partials/_middle.html.slim
+++ b/app/views/partials/_middle.html.slim
@@ -1,5 +1,9 @@
 #middle
-    h1 Honey is a tool to help manage your colonies, maximize productivity, minimize cost.
+    h1 
+        span
+            | Honey 
+        | is a tool to help manage your colonies, maximize productivity, minimize cost.
+        
     .middle-right
         a> href="#graph"
             | View the graph for 
