--- a/app/assets/stylesheets/middle.css
+++ b/app/assets/stylesheets/middle.css
@@ -36,7 +36,14 @@
 }
 
 .middle-right a span {
-    color: rgb(100, 192, 192);
+    color: rgb(82, 165, 150);
     text-transform: uppercase;
     font-size: 1.8rem;
+    font-weight: 300;
+}
+
+#middle h1 span {
+    color: rgb(82, 165, 150);
+    text-transform: uppercase;
+    font-size: 3.8rem;
 }
