--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -1,4 +1,5 @@
 .top {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +7,8 @@
     /* text-align: center; */
     width: 100%;
     height: 40rem;
-    background-color: rgb(20, 107, 107);
+    background: -webkit-linear-gradient(left, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
+    background: linear-gradient(to right, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
     color: white;
     font-family: 'Roboto', sans-serif;
 }
@@ -15,6 +17,21 @@
     letter-spacing: 0.2rem;
     font-size: 6rem;
 }
+
+/* .top:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 58rem;
+    background-color: rgb(227, 240, 234);
+    -webkit-transform: skew(-30deg);
+    transform: skew(-10deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    z-index: 100;
+} */
 
 .top h3 {
     padding: 1rem;
