--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -4,13 +4,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
     width: 100%;
     height: 40rem;
-    background: -webkit-linear-gradient(left, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
-    background: linear-gradient(to right, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
     color: white;
     font-family: 'Roboto', sans-serif;
+    
+
+    /* background: -webkit-linear-gradient(left, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
+    background: linear-gradient(to right, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89)); */
+
+    background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/fs/23298a55526729.5988857400116.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .top h1{
