--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -6,13 +6,13 @@
     align-items: center;
     width: 100%;
     height: 40rem;
-    color: white;
+    color: rgba(245, 245, 245, 0.822);
     font-family: 'Roboto', sans-serif;
     
-
     /* background: -webkit-linear-gradient(left, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89));
     background: linear-gradient(to right, rgb(82, 148, 148), rgb(20, 107, 107), rgb(13, 97, 97), rgb(11, 89, 89)); */
 
+    /* parallax */
     background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/fs/23298a55526729.5988857400116.jpg');
     background-attachment: fixed;
     background-position: center;
@@ -23,27 +23,25 @@
 
 .top h1{
     letter-spacing: 0.2rem;
-    font-size: 6rem;
+    font-size: 5rem;
 }
-
-/* .top:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 58rem;
-    background-color: rgb(227, 240, 234);
-    -webkit-transform: skew(-30deg);
-    transform: skew(-10deg);
-    -webkit-transform-origin: top;
-    transform-origin: top;
-    z-index: 100;
-} */
 
 .top h3 {
     padding: 1rem;
     color: whitesmoke;
     font-size: 2rem;
     border: 0.2rem solid whitesmoke;
+    animation: text-fade-in 2s ease 0s forwards;
+    opacity: 0; 
+}
+
+@keyframes text-fade-in {
+  from {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
