--- a/app/views/partials/_table.html.slim
+++ b/app/views/partials/_table.html.slim
@@ -42,13 +42,16 @@
                 td
                     =row['bee_id']
                 td
-                    =row['date_given']
+                    =row['comb_id']
                 td
-                    =row['nectar_dosage']
+                    =row['date_given']
                 td
                     =row['pollen_globs_collected']
                 td
+                    =row['nectar_dosage']
+                td
                     =row['value']
+                
 
 </ table>
 
