Add highcharts template

--- a/app/views/partials/_graph.html.slim
+++ b/app/views/partials/_graph.html.slim
@@ -9,6 +9,13 @@
     </p>
 
 javascript:
+    let bee_table = "#{@bee_table}";
+    let nectar_dosage = [10];
+    let pollen_globs_collected = [10];
+    for (let i = 0; i < bee_table.length; i++) {
+        nectar_dosage.push(bee_table[i]["nectar_dosage"])
+        pollen_globs_collected.push(bee_table[i]["pollen_globs_collected"])
+    }
 
     Highcharts.chart('container', {
     chart: {
@@ -18,14 +25,14 @@ javascript:
         text: 'Nectar Consumption VS Pollen Collection'
     },
     subtitle: {
-        text: 'Source: WorldClimate.com'
+        text: 'Source: Honey Database 2020'
     },
     xAxis: {
         categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
     },
     yAxis: {
         title: {
-            text: 'Temperature (°C)'
+            
         }
     },
     plotOptions: {
@@ -33,14 +40,17 @@ javascript:
             dataLabels: {
                 enabled: true
             },
-            enableMouseTracking: false
-        }
+            enableMouseTracking: true
+        },
+        series:{
+            turboThreshold: 0
+        } 
     },
     series: [{
-        name: 'Tokyo',
-        data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+        name: 'Nectar (in 100s)',
+        data: nectar_dosage
     }, {
-        name: 'London',
+        name: 'Pollen',
         data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
     }]
     });
