--- a/app/views/partials/_table.html.slim
+++ b/app/views/partials/_table.html.slim
@@ -42,7 +42,7 @@
                 td
                     =row['bee_id']
                 td
-                    =row['comb_id']
+                    =row['bee_id'].to_s + '-C' + @comb_id.to_s
                 td
                     =row['date_given']
                 td
