--- a/app/views/partials/_graph.html.slim
+++ b/app/views/partials/_graph.html.slim
@@ -4,18 +4,8 @@
 
 .highcharts-figure
     <div id="container"></div>
-    <p class="highcharts-description">
-        | what is this
-    </p>
 
 javascript:
-    let bee_table = "#{@bee_table}";
-    let nectar_dosage = [10];
-    let pollen_globs_collected = [10];
-    for (let i = 0; i < bee_table.length; i++) {
-        nectar_dosage.push(bee_table[i]["nectar_dosage"])
-        pollen_globs_collected.push(bee_table[i]["pollen_globs_collected"])
-    }
 
     Highcharts.chart('container', {
     chart: {
@@ -28,7 +18,7 @@ javascript:
         text: 'Source: Honey Database 2020'
     },
     xAxis: {
-        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+        categories: gon.dates
     },
     yAxis: {
         title: {
@@ -41,16 +31,13 @@ javascript:
                 enabled: true
             },
             enableMouseTracking: true
-        },
-        series:{
-            turboThreshold: 0
-        } 
+        }
     },
     series: [{
-        name: 'Nectar (in 100s)',
-        data: nectar_dosage
+        name: 'Nectar (in 1000s)',
+        data: gon.nectar_dosage
     }, {
         name: 'Pollen',
-        data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+        data: gon.pollen_globs_collected
     }]
     });
