Style index page

--- a/app/views/partials/_middle.html.slim
+++ b/app/views/partials/_middle.html.slim
@@ -1,25 +1,26 @@
-#middle
+.middle-top
     h1 
         span
             | Honey 
         | is a tool to help manage your colonies, maximize productivity, minimize cost.
 
-    .middle-right
-        a> href="#graph"
-            | View the graph for 
-            span
-                | Pollen Globs 
-            | collected and 
-            span
-                | Nectar 
-            | used
-        br
-        br
-        a> href="#table"
-            | Switch between 
-            span
-                | Enhanced 
-            | and 
-            span
-                | Regular 
-            | table modes
+    / h2
+        /| Dose the perfect amount to each bee in your comb to optimize pollen collection.
+
+.middle-bottom
+    div
+        div
+            | 1.   
+        | Select a worker bee from below
+    div
+        div
+            | 2.   
+        | Analyze graphical and tabular reprensentations of pollen vs nectar data
+    div
+        div
+            | 3.   
+        | Modify advisements as necessary in the simplified table version
+    div
+        div
+            | 4.   
+        | Rest assured knowing you're beeing the best queen bee you can bee
