--- a/app/views/worker_bees/index.html.slim
+++ b/app/views/worker_bees/index.html.slim
@@ -2,9 +2,6 @@
 
 = render partial: 'partials/middle'
 
-#graph
-  = render partial: 'partials/graph'
+= render partial: 'partials/index_table'
 
-#table
-  = render partial: 'partials/table'
-    
+
