--- a/app/assets/stylesheets/middle.css
+++ b/app/assets/stylesheets/middle.css
@@ -1,49 +1,54 @@
-#middle {
+.middle-top {
     display: flex;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     width: 90%;
-    height: 30rem;
+    /* height: 30rem; */
     /* background-color: rgb(20, 107, 107); */
     /* color: white; */
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
     margin: auto;
+    padding: 10rem 0 10rem 0;
 }
 
-#middle h1 {
-    width: 70%;
+.middle-top h1 {
+    width: 60%;
     border-left: 1rem solid rgb(2, 32, 25);
     padding-left: 1rem;
 }
 
-.middle-right {
-    /* display: flex; */
-    /* flex-direction: column; */
-    width: 40%;
-    font-weight: 450;
-    color: rgb(6, 53, 53);
-    line-height: 1.7;
-}
-
-.middle-right {
-    border-left: 0.5rem solid rgb(2, 32, 25);
-    padding-left: 1rem;
-}
-
-.middle-right:first-child {
-    border-bottom: 0.5rem solid rgb(2, 32, 25);
-}
-
-.middle-right a span {
-    color: rgb(82, 165, 150);
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    font-weight: 300;
-}
-
-#middle h1 span {
+.middle-top h1 span {
     color: rgb(82, 165, 150);
     text-transform: uppercase;
     font-size: 3.2rem;
+}
+
+.middle-top h2 {
+    width: 60%;
+    font-size: 3rem;
+    border-left: 1rem solid rgb(2, 32, 25);
+    padding-left: 1rem;
+}
+
+.middle-bottom {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(82, 165, 150);
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem;
+    margin: auto;
+    padding: 5rem 3rem 5rem 3rem;
+}
+
+.middle-bottom div {
+    width: 20%;
+}
+
+.middle-bottom div div{
+    color: rgba(22, 22, 22, 0.363);
+    font-size: 5rem;
+    font-weight: 800;
 }
