Style index page

--- a/app/views/partials/_middle.html.slim
+++ b/app/views/partials/_middle.html.slim
@@ -10,17 +10,21 @@
 .middle-bottom
     div
         div
-            | 1.   
-        | Select a worker bee from below
+            | 1. SELECT  
+        br
+        | a worker bee from below
     div
         div
-            | 2.   
-        | Analyze graphical and tabular reprensentations of pollen vs nectar data
+            | 2. ANALYZE 
+        br 
+        | graphical & tabular reprensentations of pollen vs nectar data
     div
         div
-            | 3.   
-        | Modify advisements as necessary in the simplified table version
+            | 3. MODIFY
+        br
+        | advisements as necessary in the simplified table version
     div
         div
-            | 4.   
-        | Rest assured knowing you're beeing the best queen bee you can bee
+            | 4. REST
+        br 
+        | assured knowing you're beeing the best queen bee you can bee
