--- a/app/assets/stylesheets/middle.css
+++ b/app/assets/stylesheets/middle.css
@@ -10,7 +10,7 @@
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
     margin: auto;
-    padding: 10rem 0 10rem 0;
+    padding: 6rem 0 6rem 0;
 }
 
 .middle-top h1 {
@@ -35,12 +35,19 @@
 .middle-bottom {
     display: flex;
     justify-content: space-between;
-    background-color: rgb(82, 165, 150);
     color: white;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
     margin: auto;
     padding: 5rem 3rem 5rem 3rem;
+    
+    background: -webkit-linear-gradient(rgb(7, 77, 77), rgb(20, 94, 94), rgb(31, 143, 143), rgb(133, 209, 209));
+    background: linear-gradient(rgb(7, 77, 77), rgb(20, 94, 94), rgb(31, 143, 143), rgb(133, 209, 209));    
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .middle-bottom div {
@@ -49,6 +56,6 @@
 
 .middle-bottom div div{
     color: rgba(22, 22, 22, 0.363);
-    font-size: 5rem;
+    font-size: 2rem;
     font-weight: 800;
 }
