Style show page

--- a/app/views/worker_bees/show.html.slim
+++ b/app/views/worker_bees/show.html.slim
@@ -1,22 +1,5 @@
-.actions
-        a> href="#graph"
-            | View graphs for 
-            span
-                | Pollen Globs 
-            | collected and 
-            span
-                | Nectar 
-            | used
-        br
-        br
-        a> href="#table"
-            | Switch between 
-            span
-                | Enhanced 
-            | and 
-            span
-                | Regular 
-            | table modes
+#header
+  = render partial: 'partials/header'
 
 #graph
   = render partial: 'partials/graph'
