--- a/app/views/partials/_bee_index.html.slim
+++ b/app/views/partials/_bee_index.html.slim
@@ -1,12 +1,10 @@
-<table class ='all_bees'>
-    thead
-        tr
-            th Bee
-    tbody 
+.bee_index
+    .bee_header
+        | BEES
+    .bee_display 
         - @worker_bees.each do |row|
-            tr
-                td
-                  a> href="/combs/#{row['comb_id']}/worker_bees/#{row['id']}"
-                    =row['id']
-
-</ table>
+                div
+                    a> href="/combs/#{row['comb_id']}/worker_bees/#{row['id']}"
+                        | WB
+                        =row['id']
+                br
