--- a/app/views/partials/_header.html.slim
+++ b/app/views/partials/_header.html.slim
@@ -1,9 +1,12 @@
 .header
-        a> href="#graph"
-            | Graph
+        a> href="/" class="header-a"
+            span data-text="Home"
+                | Home
     
-        a> href="#table"
-            | Table
-
-        a> href="/"
-            | Back to comb
+        a> href="#graph" class="header-a"
+            span data-text="Graph"
+                | Graph
+        
+        a> href="#table" class="header-a"
+            span data-text="Table"
+                | Table
