--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -18,20 +18,89 @@
     font-weight: 300;
 } */
 
-.header {
+/* .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
     height: 4rem;
     position: fixed;
     top: 0;
     z-index: 1;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 2rem;
-    background-color: rgba(55, 161, 147, 0.288);
+    color: rgb(41, 39, 39);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.5rem;
+    text-transform: uppercase;
+    padding: 2rem;
 }
 
 .header a:hover {
-    /* text-decoration: underline; */
+} */
+
+.header {
+    display: flex;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.header-a {
+    position: relative;
+    display: block;
+    width: 140px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    margin: 0 10px;
+    text-decoration: none;
+    border-top: 4px solid rgba(55, 161, 147, 0.516);
+}
+.header-a span {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    display: block;
+    text-transform: uppercase; 
+    color: #262626;
+    font-family: verdana;
+    font-weight: bold;
+    letter-spacing: 2px;
+    transform-style: preserve-3d;
+    perspective: 1000px
+}
+.header-a span:before {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:rgba(4, 115, 117, 0.516);
+    /* color: #262626; */
+    color: rgb(2, 100, 122);
+    transform-origin: top;
+    transform: rotateX(270deg);
+    transition: .5s;
+}
+.header-a:hover span:before {
+    transform: rotateX(0deg);
+}
+.header-a span:after {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(55, 161, 147, 0.516);
+    color: #fff;
+    transform-origin: top;
+    transform: rotateX(270deg);
+    transition: .5s;
+}
+.header-a:hover span:after {
+    transition-delay: .3s;
+    transform: rotateX(0deg);
 }
