--- a/app/views/partials/_header.html.slim
+++ b/app/views/partials/_header.html.slim
@@ -2,11 +2,11 @@
         a> href="/" class="header-a"
             span data-text="Home"
                 | Home
-    
-        a> href="#graph" class="header-a"
-            span data-text="Graph"
-                | Graph
-        
-        a> href="#table" class="header-a"
-            span data-text="Table"
-                | Table
+        .header-right
+            a> href="#graph" class="header-a"
+                span data-text="Graph"
+                    | Graph
+            
+            a> href="#table" class="header-a"
+                span data-text="Table"
+                    | Table
