--- a/app/views/partials/_middle.html.slim
+++ b/app/views/partials/_middle.html.slim
@@ -2,7 +2,7 @@
     h1 
         span
             | Honey 
-        | is a tool to help manage your colonies, maximize productivity, minimize cost.
+        | helps you manage your colonies, maximize productivity, and minimize nectar cost.
 
     / h2
         /| Dose the perfect amount to each bee in your comb to optimize pollen collection.
