--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -38,12 +38,15 @@
 
 .header {
     display: flex;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     z-index: 1;
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color: white;
+    max-height: 70px;
 }
 
 .header-a {
@@ -56,6 +59,11 @@
     margin: 0 10px;
     text-decoration: none;
     border-top: 4px solid rgba(55, 161, 147, 0.516);
+}
+
+.header-right {
+    display: flex;
+    flex-direction: flex-end;
 }
 .header-a span {
     width: 100%;
