--- a/app/assets/stylesheets/middle.css
+++ b/app/assets/stylesheets/middle.css
@@ -2,14 +2,14 @@
     display: flex;
     /* flex-direction: column; */
     justify-content: center;
-    align-items: center;
-    width: 90%;
+    /* align-items: center; */
+    /* width: 90%; */
     /* height: 30rem; */
     /* background-color: rgb(20, 107, 107); */
     /* color: white; */
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
-    margin: auto;
+    /* margin: auto; */
     padding: 6rem 0 6rem 0;
 }
 
