--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -1,38 +1,48 @@
 #table {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
  }
  
- table {
-  width: 60%;
-  table-layout: fixed;
-  background: -webkit-linear-gradient(left, rgb(117, 207, 207), rgb(47, 160, 160), rgb(22, 165, 165), rgb(11, 112, 112));
-  background: linear-gradient(to right, rgb(117, 207, 207), rgb(47, 160, 160), rgb(22, 165, 165), rgb(11, 112, 112));
-  font-family: 'Roboto', sans-serif;
+table {
+    width: 60%;
+    table-layout: fixed;
+    background: -webkit-linear-gradient(left, rgb(117, 207, 207), rgb(47, 160, 160), rgb(22, 165, 165), rgb(11, 112, 112));
+    background: linear-gradient(to right, rgb(117, 207, 207), rgb(47, 160, 160), rgb(22, 165, 165), rgb(11, 112, 112));
+    font-family: 'Roboto', sans-serif;
 }
 
 thead tr th {
-  background-color: rgba(255, 255, 255, 0.096);
+    color: black;
+    background-color: rgba(255, 255, 255, 0.925);
+}
+
+thead tr th:hover {
+    position: relative; 
+    top: 5px;
+}
+
+tbody tr:nth-child(even) {
+    background-color: rgba(35, 129, 153, 0.315);
 }
 
 th {
-  padding: 20px 15px;
-  text-align: left;
-  font-weight: 500;
-  font-size: 12px;
-  color: #fff;
-  text-transform: uppercase;
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #fff;
+    text-transform: uppercase;
 }
 
 td {
-  padding: 15px;
-  text-align: left;
-  vertical-align: middle;
-  font-weight: 300;
-  font-size: 12px;
-  color: #fff;
-  border-bottom: solid 1px rgba(255,255,255,0.1);
+    padding: 15px;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 12px;
+    color: #fff;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
 }
 
 .regular {
@@ -133,3 +143,34 @@ td {
 .button .checkbox:checked ~ .layer {
     background-color: #fef8f8;
 }
+
+.push-edit {
+    transform: translate(-50%, -50%);
+}
+
+.edit-button{
+    height: 4rem;
+    min-width: 5rem;
+    background: red;
+    border: none;
+    outline: none;
+    color: white;
+    font-size: 0.5rem;
+    border-radius: 3px;
+    box-shadow: 0 5px 0px blue;
+    border-bottom: 2px solid green;
+}
+.push-edit:hover{
+    background: darken(red,5%);
+    box-shadow: 0 4px 1px darken(red,5%);
+    border-bottom: 2px solid darken(red,8%);
+    transition: all 0.1s ease-in;
+}
+  
+.edit-button:active{
+    transform:translateY(4px);
+    border-bottom-width: 2px;
+    box-shadow: none;
+}
+
+
