--- a/app/views/partials/_table.html.slim
+++ b/app/views/partials/_table.html.slim
@@ -25,8 +25,9 @@
                     =row['value']
                 td
                     - if row['value']
-                        button onclick="editAdvisment(event)" name=row['adv_id']
-                            | Edit Advisement
+                        .push-edit
+                            button onclick="editAdvisment(this)" name=row['adv_id'] class='edit-button'
+                                | Edit Advisement
 
 
 </ table>
@@ -80,6 +81,6 @@ javascript:
 
     function editAdvisment(e) {
         let xhttp = new XMLHttpRequest();
-        xhttp.open("PATCH", `combs/#{@comb_id}/advisements/${e.target.name}`, true);
+        xhttp.open("PATCH", `/advisements/overrule/${e.name}`, true);
         xhttp.send();
     }
